paper: more on TYPES

--- a/paper/types-2022-postproceedings/types-2022-postproceedings.bib
+++ b/paper/types-2022-postproceedings/types-2022-postproceedings.bib
@@ -93,6 +93,27 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{DBLP:conf/oopsla/KellMS16,
+  author    = {Stephen Kell and
+               Dominic P. Mulligan and
+               Peter Sewell},
+  editor    = {Eelco Visser and
+               Yannis Smaragdakis},
+  title     = {The missing link: explaining {ELF} static linking, semantically},
+  booktitle = {Proceedings of the 2016 {ACM} {SIGPLAN} International Conference on
+               Object-Oriented Programming, Systems, Languages, and Applications,
+               {OOPSLA} 2016, part of {SPLASH} 2016, Amsterdam, The Netherlands,
+               October 30 - November 4, 2016},
+  pages     = {607--623},
+  publisher = {{ACM}},
+  year      = {2016},
+  url       = {https://doi.org/10.1145/2983990.2983996},
+  doi       = {10.1145/2983990.2983996},
+  timestamp = {Wed, 23 Jun 2021 15:34:31 +0200},
+  biburl    = {https://dblp.org/rec/conf/oopsla/KellMS16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{DBLP:conf/popl/HuetH14,
   author    = {G{\'{e}}rard P. Huet and
                Hugo Herbelin},
